--- a/home.css
+++ b/home.css
@@ -13,7 +13,7 @@ body{
   position: fixed;
   top: 0;
   height: 12vh;
-  z-index: 1;
+
 }
 /* NCC and IITR Logo */
 .logo .logoncc {
@@ -564,22 +564,24 @@ a#logo5>img {
   .aim_1{
     height: 50vh;
   }
+  .aim_1 img{
+    width: 90%;
+  }
   .pledge_0 {
     margin-top: 0px;
   }
   .pledge_1 p{
     margin-top: 30px;
   }
-  .aim_1 img{
-    width: 80%;
-  }
+ 
 
 }
 @media only screen and (min-width:300px) and (max-width:341px){
 #social{
     display: flex;
     justify-content: space-evenly;
-    align-items: center; padding: 0px;
+    align-items: center; 
+    padding: 0px;
 }
 
   #logo1,
@@ -590,7 +592,10 @@ a#logo5>img {
     padding: 0px;
   }
   .aim_1 img{
-    width: 100%;
+    width: 90%;
+  }
+  .pledge_0 img{
+    padding-left: 90px;
   }
 }
 @media only screen and (min-width:340px) and (max-width:400px){
